# CrabNes

./: .gitignore  Cargo.toml  LICENSE  Play CrabNes.bat  Play NES.bat  README.md  THIRD_PARTY_NOTICES.md  lordtom,maru,tompav2-smb3-warps.fm2
.github/workflows/: windows-build.yml
crates/nes-achievements-native/: Cargo.toml  build.rs
crates/nes-achievements-native/native/: nes_ra.c  nes_ra.h
crates/nes-achievements-native/src/: lib.rs
crates/nes-audio-native/: Cargo.toml  build.rs
crates/nes-audio-native/examples/: probe.rs
crates/nes-audio-native/native/: nes_audio.c
crates/nes-audio-native/src/: lib.rs
crates/nes-cli/: Cargo.toml  build.rs
crates/nes-cli/examples/: autoplay.rs  fm2_repro.rs
crates/nes-cli/src/: lib.rs  main.rs  test_rom.rs
crates/nes-core/: Cargo.toml
crates/nes-core/src/: bus.rs  cheat.rs  controller.rs  cpu.rs  emulator.rs  fceux_state.rs  lib.rs  ppu.rs  timing.rs
crates/nes-core/src/apu/: channels.rs  mixer.rs  mod.rs
crates/nes-core/src/cartridge/: axrom.rs  cnrom.rs  fds.rs  fme7.rs  ines.rs  mapper.rs  mapper99.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc5.rs  mod.rs  n163.rs  nrom.rs  uxrom.rs  vrc.rs  vrc6.rs  vrc7.rs
crates/nes-ui/: Cargo.toml
crates/nes-ui/src/: achievement_archive.rs  achievements.rs  app.rs  audio.rs  crt.rs  library.rs  main.rs  palettes.rs  persistence.rs  save_states.rs  screenshot.rs  settings.rs  tas.rs  tas_control.rs
crates/nes-ui/src/app/: achievements_ui.rs  emulation.rs  input.rs  mod.rs  pages.rs  rewind.rs  tas_ui.rs  windows.rs
docs/: CRT_FILTER.md  CUSTOM_PALETTES.md  TAS_CONTROL_VIEW.md  TAS_FORMAT.md  TEST_ROMS.md
