[package]
name = "nes-cli"
default-run = "nes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nes-core = { path = "../nes-core" }
png = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
