[package]
name = "nes-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = "0.35.0"
image = { version = "0.25.10", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22.1"
nes-audio-native = { path = "../nes-audio-native" }
nes-core = { path = "../nes-core" }
png = "0.18.1"
rfd = "0.17.2"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }

[lints]
workspace = true
